--- a/app/src/main/res/layout/creditcard.xml
+++ b/app/src/main/res/layout/creditcard.xml
@@ -13,6 +13,7 @@
         android:id="@+id/tv_cardholder_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
         android:layout_margin="8dp"
         android:hint="Enter Name"
         android:textSize="12sp"
@@ -24,6 +25,7 @@
     <EditText
         android:id="@+id/tv_card_number"
         android:layout_width="0dp"
+        android:fontFamily="@font/montserrat"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:hint="Enter Number"
@@ -40,6 +42,7 @@
         android:id="@+id/ll_expiry_cvv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
         android:layout_margin="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +54,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/montserrat"
             android:orientation="vertical">
 
             <EditText
@@ -58,6 +62,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="MM/YY"
+                android:fontFamily="@font/montserrat"
                 android:inputType="date"
                 android:maxLength="5"
                 android:digits="0123456789/"
@@ -75,6 +80,7 @@
             <EditText
                 android:id="@+id/tv_cvv"
                 android:layout_width="match_parent"
+                android:fontFamily="@font/montserrat"
                 android:layout_height="wrap_content"
                 android:hint="CVV"
                 android:inputType="numberPassword"
@@ -91,6 +97,7 @@
         android:layout_margin="16dp"
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
+        android:fontFamily="@font/montserrat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ll_expiry_cvv" />
 
