--- a/app/src/main/res/layout/forgot_page.xml
+++ b/app/src/main/res/layout/forgot_page.xml
@@ -47,6 +47,7 @@
                 android:text="@string/forgot_password_instruction"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                 android:textAlignment="center"
+                android:fontFamily="@font/montserrat"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/logo"
@@ -57,6 +58,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:fontFamily="@font/montserrat"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text"
@@ -66,6 +68,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
+                    android:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:hint="@string/email_hint"
                     android:inputType="textEmailAddress" />
@@ -75,6 +78,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_send"
                 android:layout_width="0dp"
+                android:fontFamily="@font/montserrat"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="@string/send_button"
@@ -89,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/back_to_login"
+                android:fontFamily="@font/montserrat"
                 android:textSize="17dp"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                 android:textColor="?attr/colorPrimary"
