--- a/app/src/main/res/layout/membership.xml
+++ b/app/src/main/res/layout/membership.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:text="Membership Details"
             android:textSize="24sp"
+            android:fontFamily="@font/montserrat"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/et_membership_name"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +28,7 @@
             android:id="@+id/et_membership_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:hint="Membership Name"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +39,7 @@
         <EditText
             android:id="@+id/et_company_name"
             android:layout_width="0dp"
+            android:fontFamily="@font/montserrat"
             android:layout_height="wrap_content"
             android:hint="Company Name"
             android:inputType="text"
@@ -49,6 +52,7 @@
             android:id="@+id/et_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:hint="Price"
             android:inputType="numberDecimal"
             android:layout_marginTop="16dp"
@@ -60,6 +64,7 @@
             android:id="@+id/et_payment_date"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:hint="Payment Due Date"
             android:inputType="date"
             app:layout_constraintTop_toTopOf="@id/et_price"
@@ -71,6 +76,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Submit"
+            android:fontFamily="@font/montserrat"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/et_payment_date"
             app:layout_constraintStart_toStartOf="parent"
