--- a/app/src/main/res/layout/password.xml
+++ b/app/src/main/res/layout/password.xml
@@ -16,6 +16,7 @@
             android:layout_height="wrap_content"
             android:text="Password Manager"
             android:textSize="24sp"
+            android:fontFamily="@font/montserrat"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/et_service_name"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         <EditText
             android:id="@+id/et_service_name"
             android:layout_width="0dp"
+            android:fontFamily="@font/montserrat"
             android:layout_height="wrap_content"
             android:hint="Service Name"
             android:inputType="text"
@@ -38,6 +40,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Username/Email"
+            android:fontFamily="@font/montserrat"
             android:inputType="textEmailAddress"
             app:layout_constraintTop_toBottomOf="@id/et_service_name"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="Password"
+            android:fontFamily="@font/montserrat"
             android:inputType="textPassword"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/et_username"
@@ -59,6 +63,7 @@
             android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:text="Save"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/et_password"
