--- a/app/src/main/res/layout/passwordinfo.xml
+++ b/app/src/main/res/layout/passwordinfo.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/tv_password_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
                 android:text="ID: "
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="Service Name"
                 android:textStyle="bold"
+                android:fontFamily="@font/montserrat"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_password_id" />
@@ -39,6 +41,7 @@
             <TextView
                 android:id="@+id/tv_username"
                 android:layout_width="0dp"
+                android:fontFamily="@font/montserrat"
                 android:layout_height="wrap_content"
                 android:text="Username/Email"
                 app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +52,7 @@
             <Button
                 android:id="@+id/btn_delete_entry"
                 android:layout_width="wrap_content"
+                android:fontFamily="@font/montserrat"
                 android:layout_height="wrap_content"
                 android:text="Delete"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +62,7 @@
             <TextView
                 android:id="@+id/tv_password"
                 android:layout_width="0dp"
+                android:fontFamily="@font/montserrat"
                 android:layout_height="wrap_content"
                 android:text="Password"
                 app:layout_constraintStart_toStartOf="parent"
