--- a/app/src/main/res/layout/reset_password_page.xml
+++ b/app/src/main/res/layout/reset_password_page.xml
@@ -26,6 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:hint="New Password"
+        android:fontFamily="@font/montserrat"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +38,7 @@
         android:id="@+id/confirm_password"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:fontFamily="@font/montserrat"
         android:hint="Confirm Password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Reset Password"
+        android:fontFamily="@font/montserrat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/confirm_password"
