--- a/app/src/main/res/layout/signup_page.xml
+++ b/app/src/main/res/layout/signup_page.xml
@@ -52,6 +52,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
+                    android:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:hint="Email"
@@ -73,6 +74,7 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
+                    android:fontFamily="@font/montserrat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Password"
@@ -95,6 +97,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/confirm_password"
                     android:layout_width="match_parent"
+                    android:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
                     android:hint="Confirm Password"
                     android:inputType="textPassword" />
@@ -106,6 +109,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:fontFamily="@font/montserrat"
                 android:text="SIGN UP"
                 android:textColor="@android:color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,9 +119,10 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/already_have_account"
-                android:layout_width="225dp"
-                android:layout_height="64dp"
+                android:layout_width="245dp"
+                android:layout_height="37dp"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/montserrat"
                 android:padding="3dp"
                 android:text="Already have an account?"
                 android:textColor="?android:attr/textColorSecondary"
