--- a/app/src/main/res/layout/personal_id_info.xml
+++ b/app/src/main/res/layout/personal_id_info.xml
@@ -50,7 +50,9 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toEndOf="@id/iv_emblem"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textColor="@android:color/transparent"
+                        />
 
                     <ImageView
                         android:id="@+id/iv_emblem"
