--- a/app/src/main/res/layout/random_info.xml
+++ b/app/src/main/res/layout/random_info.xml
@@ -22,9 +22,10 @@
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Input Form"
                 android:textSize="24sp"
-                android:fontFamily="@font/montserrat"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,17 +52,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
-            <EditText
-                android:id="@+id/et_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/montserrat"
-                android:hint="Title"
-                android:inputType="textPersonName"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_note_id" />
+
 
             <TextView
                 android:id="@+id/tv_description_label"
@@ -72,7 +63,7 @@
                 android:fontFamily="@font/montserrat"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/et_name"
+                app:layout_constraintTop_toBottomOf="@id/et_note_id"
                 android:layout_marginTop="16dp"/>
 
             <EditText
